Add basic functionality and styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-  <p>Player Score: <span>0</span></p>
+  
+  <p id="text">Player Score: <span id="score">0</span></p>
   <canvas id="canvas" width="800" height="600"></canvas>
 
 <script src="main.js"></script>
